Fix responsive alignment for portfolio items

--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,14 @@ body {
 	line-height: 1.75;
 }
 
+.items {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .items li {
-  display: inline-block;
+  list-style: none;
   padding: 5px;
 }
 
@@ -256,8 +262,8 @@ body {
 	margin: 20px 0;
 	opacity: 1;
 	transition: all .3s;
-	height: 260px;
-	width: 325px;
+	height: 200px;
+	width: 200px;
 }
 
 /* Contact Styling */
@@ -323,7 +329,7 @@ footer p {
 	margin: 0;
 }
 
-.overlay{
+.overlay {
   width: 100%;
   height: 100%;
   position: absolute;
